style: checkout頁面 樣式修改

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -197,8 +197,13 @@
 			<!---------- 結帳流程三 ---------->
 			<div v-else-if="step == 'C'" class="stepC container-lg">
 				<h3>訂單已完成，您的訂單編號為#20220311</h3>
-				<h5>您可以前往(<a href="member.html" class="myMB">我的會員</a>)查詢訂單狀態</h5>
-				<a href="products.html" class="gogoa"><button class="gogo">繼續購物</button></a>
+				<h5>
+					您可以前往(<a href="member.html" class="myMB">我的會員</a
+					>)查詢訂單狀態
+				</h5>
+				<a href="products.html" class="gogoa"
+					><button class="gogo">繼續購物</button></a
+				>
 			</div>
 		</div>
 		<!-- footer -->
