--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             <section class="indexWelcome container-lg p_scene" id="index-welcome">
                 <h3 data-depth="0.1" class="welcomeTitle">歡迎來到Sìkha牧場</h3>
                 <img data-depth="0.4" src="img/material/circle_yellow_800.png" class="decYellow" alt="decoration_circle">
-                <img data-depth="0" src="img/index/welcometo.png" class="mainImg" alt="cow_eating_grass">
+                <img data-depth="0" src="img/index/welcometo.jpg" class="mainImg" alt="cow_eating_grass">
                 <div data-depth="0.3" class="nameIntroContainer layer">
                     <h5 class="nameIntro">Sìkha源自閩南語「四腳」拼音，可愛的四腳夥伴們住在南投山林的牧場，期待著兩腳朋友來臨喔！</h5>
                 </div>
