--- a/src/game.html
+++ b/src/game.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="game-body">
-    <a href="activity.html" class="backtoactivity"><img src="../img/material/sign.png" alt=""></a>
+    <a href="activity.html" class="backtoactivity"><img src="./img/material/sign.png" alt=""></a>
     <img src="img/game/shaver.png" alt="" class="shaver" id="shaver">
     <div class="game-bg">
         <h4>剃羊毛達人</h4>
