--- a/src/back_news.html
+++ b/src/back_news.html
@@ -23,8 +23,8 @@
             <div class="bi_top">
 
                 <div class="left">
-                    <button class="yellor"><a href="./back_additem.html">新增</a></button>
-                    <button class="orange">刪除</a></button>
+                    <button class="yellor" id="add_news"><a href="./back_additem.html">新增</a></button>
+                    <button class="orange" id="remove_news">刪除</a></button>
                 </div>
 
                 <div class="right">
@@ -111,6 +111,7 @@
 
         </div>
     </article>
+    <script src="./js/back_news.js"></script>
 </body>
 
 </html>
