--- a/src/activity.html
+++ b/src/activity.html
@@ -318,10 +318,10 @@
                                     },
                                     {
                                         name: '4',
-                                        title: '跟我一起玩',
+                                        title: '小鹿相見歡',
                                         image: './img/activity/playwithdeer.png',
                                         icon_img: '',
-                                        desc: '快來Sìkha牧場和可愛的小鹿一起玩耍吧！',
+                                        desc: '快來Sìkha牧場和可愛的小鹿一起享受個歡樂的午後吧！',
                                         data: ['3/11', '3/13'],
                                         time_period: [],
                                     },
@@ -350,7 +350,7 @@
                                         title: '餵草泥馬',
                                         image: './img/activity/alpacaeat.png',
                                         icon_img: '',
-                                        desc: '草泥馬吃草',
+                                        desc: '想與草泥馬近距離接觸嗎？這就是你最好的機會，趕快一起來Sìkha牧場餵可愛的草泥馬吃草吧！',
                                         data: ['3/11', '3/13'],
                                         p1: '',
                                         p2: '',
@@ -425,10 +425,10 @@
                                     },
                                     {
                                         name: '4',
-                                        title: '一起玩耍',
+                                        title: '小豬相見歡',
                                         image: './img/activity/playwithpig.png',
                                         icon_img: '',
-                                        desc: '快來Sìkha牧場和可愛的小豬一起玩耍吧！',
+                                        desc: '快來Sìkha牧場和可愛的小豬一起玩耍吧！與他們一起無憂無慮的嬉鬧起來！',
                                         data: ['3/11', '3/13'],
                                         time_period: [],
                                         p1: '9:00-9:30',
