--- a/src/back_news.html
+++ b/src/back_news.html
@@ -13,10 +13,11 @@
 
     <article class="bk_in">
 
-        <h4>最新消息</h4>
-
-
-
+        <div class="bk_title">
+            <img src="./img/backpages/title_cow_left.png" alt="" class="mb_cow">
+            <h4>最新消息</h4>
+            <img src="./img/backpages/title_cow_right.png" alt="" class="mb_cow">
+        </div>
 
         <ul class="bi_fuc">
 
