--- a/src/back_news.html
+++ b/src/back_news.html
@@ -59,7 +59,7 @@
                 <img src="./img/news/Rectangle 196.png" alt="">
                 <p>【歡慶兒童節 帶小孩來牧場放電囉】</p>
                 <p>2022/3/15 00:00</p>
-                <button><a href="./back_additem.html">編輯</a></button>
+                <button>編輯</button>
             </li>
             <li class="list_in">
                 <label class="check_container">
@@ -69,7 +69,7 @@
                 <img src="./img/news/Rectangle 1964.png" alt="">
                 <p>你我一起防疫大作戰</p>
                 <p>2022/3/15 00:00</p>
-                <button><a href="./back_additem.html">編輯</a></button>
+                <button>編輯</button>
             </li>
             <li class="list_in">
                 <label class="check_container">
@@ -79,7 +79,7 @@
                 <img src="./img/news/Rectangle 1966.png" alt="">
                 <p>新冠狀病毒防疫一起來</p>
                 <p>2022/3/15 00:00</p>
-                <button><a href="./back_additem.html">編輯</a></button>
+                <button>編輯</button>
             </li>
             <li class="list_in">
                 <label class="check_container">
@@ -89,7 +89,7 @@
                 <img src="./img/news/Rectangle 1968.png" alt="">
                 <p>【公告】2022春節營運時間及票價優惠</p>
                 <p>2022/3/15 00:00</p>
-                <button><a href="./back_additem.html">編輯</a></button>
+                <button>編輯</button>
             </li>
             <li class="list_in">
                 <label class="check_container">
@@ -99,7 +99,7 @@
                 <img src="./img/news/Rectangle 1969.png" alt="">
                 <p>【粉萌春日祭】3月周末例假日門票優惠開始啦!</p>
                 <p>2022/2/28 00:00</p>
-                <button><a href="./back_additem.html">編輯</a></button>
+                <button>編輯</button>
             </li>
         </ul>
         <div class="down">
